testdata/baselines/reference/submodule/conformance/typeFromPropertyAssignment16.errors.txt
a.js(9,12): error TS2503: Cannot find namespace 'Outer'.


==== a.js (1 errors) ====
    var Outer = {};
    
    Outer.Inner = function () {}
    Outer.Inner.prototype = {
        x: 1,
        m() { }
    }
    
    /** @type {Outer.Inner} */
               ~~~~~
!!! error TS2503: Cannot find namespace 'Outer'.
    var inner
    inner.x
    inner.m()
    var inno = new Outer.Inner()
    inno.x
    inno.m()
    